Fixed layout issue while loading

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,8 @@
+.app {
+  width: 100%;
+  height: 100%;
+}
+
 main {
   min-height: 100%;
   padding-top: 50px;
